refactor: address gisu organization review comments